--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nuxthq/studio": "1.0.6",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "3.1.1",
-    "nuxt": "3.9.1",
+    "nuxt": "^3.12.4",
     "nuxt-icon": "0.6.7",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
@@ -24,6 +24,7 @@
     "@iconify-json/lucide": "1.1.145",
     "@nuxt/image": "1.1.0",
     "@nuxt/ui": "2.11.1",
+    "package.json": "^2.0.1",
     "vue-use-fixed-header": "^2.0.0"
   }
 }
