--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DSYZayn/blog",
+  "name": "@dsyzayn/blog",
   "version": "1.8.0",
   "private": true,
   "license": "MIT",
@@ -16,13 +16,11 @@
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@nuxt/content": "^2.12.1",
+    "@nuxt/content": "^3.0.0",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/robots": "^4.1.7",
-    "@nuxtjs/sitemap": "^5.3.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@stefanobartoletti/nuxt-social-share": "^0.6.1",
     "@tailwindcss/forms": "^0.5.7",
